# tp2-t2-log-monitor-system

./: .clang-format  .gitignore  CMakeLists.txt  CPPLINT.cfg  README.md
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
docs/: doxygen.conf
include/monitor/: LogListParser.hpp  LogMonitor.hpp  LogParser.hpp  LogTypes.hpp
include/monitor/core/: LogListParser.hpp  LogManager.hpp  LogParser.hpp
include/monitor/utils/: DateUtils.hpp  LogTypes.hpp
src/: CMakeLists.txt  main.cpp
src/core/: LogListParser.cpp  LogManager.cpp  LogParser.cpp
src/utils/: DateUtils.cpp  Stringutils.cpp
test_logs/: log1.txt  log2.txt  logs.txt
test_logs/sub/: log1.txt
tests/: CMakeLists.txt  TestMonitor.cpp
tests/mocks/: master_logs.txt
